problem solved: fixed bug of z-index did't apply on title and dated

--- a/src/styles/components/masonry-post.scss
+++ b/src/styles/components/masonry-post.scss
@@ -21,7 +21,7 @@
         box-sizing: border-box; //Width and height apply to all parts of the element: content, padding and borders:
     }
 
-    .image-title, .image-date, .tags-container, .div {
+    .image-title, .image-date, .tags-container, div {
         float: left;
         width: 100%;
         z-index: 10;
